production/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-buses
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api-buses
  template:
    metadata:
      labels:
        app: backend-api-buses
    spec:
      containers:
        - name: backend-api-buses
          image: acrbusesjalapa.azurecr.io/backend-api-buses:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-buses
  namespace: production
spec:
  selector:
    app: backend-api-buses
  ports:
    - port: 80
      targetPort: 8080
