production/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-buses
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app-buses
  template:
    metadata:
      labels:
        app: frontend-app-buses
    spec:
      containers:
        - name: frontend-app-buses
          image: acrbusesjalapa.azurecr.io/frontend-app-buses:3df11798
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-buses
  namespace: production
spec:
  selector:
    app: frontend-app-buses
  ports:
    - port: 80
      targetPort: 80
