production/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-buses-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-api-buses
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend-api-buses
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app-buses
                port:
                  number: 80
